--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,11 @@
+# Uncomment the relevant target for your chip here (ESP32, ESP32-S2, ESP32-S3 or ESP32-C3)
 [build]
-target = "xtensa-esp32-espidf"
+target = "xtensa-esp32-espidf" # ESP32-S2
+
+# target = "xtensa-esp32-espidf"
+#target = "xtensa-esp32s2-espidf"
+#target = "xtensa-esp32s3-espidf"
+#target = "riscv32imc-esp-espidf" # ESP32-C3
 
 [target.xtensa-esp32-espidf]
 linker = "ldproxy"
