--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,10 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 
 [dependencies]
 log = { version = "0.4", default-features = false }
-esp-idf-svc = { version = "0.47" , default-features = false }
 embedded-svc = "0.26"
 anyhow = "1.0.79"
 
 bstr = { version = "1.8.0", default-features = false }
-esp32-nimble = "0.5.1"
 tokio = { version = "*", features = ["rt", "time", "sync","macros"] }
 lazy_static = "1.4.0"
 uuid = { version = "1.2.2", default-features = false, features = ["macro-diagnostics"] }
@@ -42,8 +40,16 @@ serde = { version = "1", features = ["derive"]}
 serde_json = { version = "1"}
 
 idotmatrix = {git = "https://github.com/Kezii/idotmatrix.git"}
-esp-idf-hal = "0.42"
-esp-idf-sys = "0.33"
+
+# esp dependencies
+# bluetooth : https://github.com/taks/esp32-nimble
+esp32-nimble = "0.8.1"
+esp-idf-hal = "0.44"
+# peripheral like wifi
+esp-idf-svc = { version = "0.49" , default-features = false }
+# this give Failed to run Python dependency check.  Python:
+    # Error: 255
+esp-idf-sys = "0.35"
 thiserror = "1.0.56"
 
 toml-cfg = "=0.1.3"
@@ -55,5 +61,7 @@ bindings_module = "camera"
 
 
 [build-dependencies]
-embuild = "0.31.3"
+#  https://github.com/esp-rs/embuild
+# A library with many utilities for building embedded frameworks, libraries, and other artifacts in a cargo build script.
+embuild = "0.32"
 toml-cfg = "=0.1.3"
